se eliminan clases de css antiguo

--- a/index.html
+++ b/index.html
@@ -2,53 +2,51 @@
 <html lang="en">
 
 <head>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ARIADNE CROCHET - Crochet Lovers</title>
-    <link rel="stylesheet" href="./css/estilos.css" />
+
 </head>
 
-<body class="body">
-    <header class="header">
-        <img class="header__logo" src="./assets/Logos/logo en negro-01.png" alt="Logo de Ariadne" />
-        <nav class="header__nav">
-            <ul class="header_list">
-                <li class="header__item"><a href="#">Inicio</a></li>
-                <li class="header__item"><a href="./sections/sobreariadne.html">Descubre</a></li>
-                <li class="header__item"><a href="./sections/tutoriales.html">Crea</a></li>
-                <li class="header__item"><a href="./sections/tienda.html">Regala</a></li>
-                <li class="header__item"><a href="./sections/contacto-encargos.html">Personaliza</a></li>
+<body>
+    <header>
+        <img src="./assets/Logos/logo en negro-01.png" alt="Logo de Ariadne" />
+        <nav>
+            <ul >
+                <li ><a href="#">Inicio</a></li>
+                <li ><a href="./sections/sobreariadne.html">Descubre</a></li>
+                <li ><a href="./sections/tutoriales.html">Crea</a></li>
+                <li ><a href="./sections/tienda.html">Regala</a></li>
+                <li ><a href="./sections/contacto-encargos.html">Personaliza</a></li>
             </ul>
         </nav>
     </header>
-    <main class="main">
-        <section class="main__section hero">
-            <article data-aos="fade-up-right" class="main__article">
-                <h1 class="main__h1"> 
+    <main>
+        <section>
+            <article>
+                <hn> 
                     Ariadne <br />
                     Crochet
                 </h1>
-                <h2 class="main__h2">Creamos con Amor</h2>
-                <button class="main__button">
-                <a href="./sections/contacto-encargos.html"> <span class="main__button-poop"> Crea con Ariadne </span></a>
+                <h2 n>Creamos con Amor</h2>
+                <button n>
+                <a href="./sections/contacto-encargos.html"> <span> Crea con Ariadne </span></a>
                 </button>
             </article> 
-            <div class="div__mariposa" >
-                <img data-aos="fade-up-left" class="img__mariposa" src="./css/bckgr-mariposa.png" alt="Imagen animada de Mariposa">
+            <div >
+                <img src="./css/bckgr-mariposa.png" alt="Imagen animada de Mariposa">
             </div> 
         </section> <!-- /HERO SECTION-->
-        <section class="complementomain__section main__section">
-            <div class="complementomain__div">
+        <section>
+            <div>
             <video src="./assets/placeholdervideo.mp4" type="video/mp4" width="550px" controls>Video introductorio de servicios
                 <code>No soporta video</code>
             </video>
             </div>
-            <div class="div__complemento">
-                <h2 class="main__h2 main__h2--noitalic">Crochet Lovers</h2>
-                <p class="main__parragraph">
+            <div >
+                <h2 >Crochet Lovers</h2>
+                <p >
                     Adriane es un emprendimiento que busca llevar el amor por el crochet
                     a todakhjgdshgjg lorem ipsum dolor sit amet consectetur adipisicing
                     elit. Nisi nemo unssssde blanditiis! Quos assumenda reprehenderit ut
@@ -58,46 +56,43 @@
             </div> <!-- /SECCIÓN INTRODUCTORIA VID + TXT-->
         </section>
     </main>
-    <section class="contenedor__clientes">
-        <div class="card textos">
-            <img class="img__clientes" src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2 class="clientes__h2 main__h2--noitalic">Recrea a tu ser amado</h2>
-            <p class="client__parragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
+    <section>
+        <div>
+            <img src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
+            <h2>Recrea a tu ser amado</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
                     quaerat aperiam fugit, omnis iure ipsa qui tempore in commodi? Blanditiis aspernatur ab cupiditate
                     consequuntur!</p>
         </div>
-        <div class="card textos">
-            <img class="img__clientes" src="./assets/customers/lau-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2 class="clientes__h2 main__h2--noitalic">Conviértete en la heroína de tus sueños</h2>
-            <p class="client__parragraph">Possimus rerum provident beatae corrupti adipisci culpa, repudiandae fuga illo. Dolore, modi? Vero at
+        <div>
+            <img src="./assets/customers/lau-custom.png" alt="Imagen del producto comprado por el cliente">
+            <h2>Conviértete en la heroína de tus sueños</h2>
+            <p >Possimus rerum provident beatae corrupti adipisci culpa, repudiandae fuga illo. Dolore, modi? Vero at
                     amet velit, veniam nobis hic, repellat accusantium suscipit odio debitis recusandae autem nam dolor quod
                     incidunt.</p>
         </div>
-        <div class="card textos">
-            <img class="img__clientes" src="./assets/customers/manu-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2 class="clientes__h2 main__h2--noitalic">Guarda un recuerdo hermoso</h2>
-            <p class="client__parragraph">Repellat architecto nesciunt ullam quia dolor id eum molestias, eos soluta corrupti! Nulla suscipit
+        <div>
+            <img src="./assets/customers/manu-custom.png" alt="Imagen del producto comprado por el cliente">
+            <h2>Guarda un recuerdo hermoso</h2>
+            <p>Repellat architecto nesciunt ullam quia dolor id eum molestias, eos soluta corrupti! Nulla suscipit
                     recusandae magni odio totam optio soluta deserunt vero porro, aut facere distinctio inventore tenetur
                     architecto? Modi.</p>
         </div>
     </section> <!--/Valoraciones de clientes-->
-    <footer class="footer">
-        <div class="footer__div">
-            <img class="footer__logo" src="./assets/Logos/editable para sello ariadne crochet (1).png" alt="Logo de Ariadne" />
-            <ul class="footer__list">
-                <li class="footer__item"><a href="https://www.instagram.com/ariadnecrochet/" target="_blank">instagram</a></li>
+    <footer>
+        <div>
+            <img src="./assets/Logos/editable para sello ariadne crochet (1).png" alt="Logo de Ariadne" />
+            <ul>
+                <li><a href="https://www.instagram.com/ariadnecrochet/" target="_blank">instagram</a></li>
                 <li></li>
             </ul>
         </div>
-        <div class="footer__div--map">
-            <iframe class="footer__map"
+        <div>
+            <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13318.01645865037!2d-70.6573578!3d-33.43617045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5bb5516f7e5%3A0x345d3c66bc685cbd!2sMall%20VIVO%20El%20Centro!5e0!3m2!1ses-419!2scl!4v1638116908324!5m2!1ses-419!2scl"
                 width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </footer>
-    <script>
-        AOS.init();
-    </script>
 </body>
 
 </html>
