--- a/index.html
+++ b/index.html
@@ -1,98 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./css/styles.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ARIADNE CROCHET - Crochet Lovers</title>
+    <title>Ariadne Bootstrap</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">Ariadne Crochet</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Descubre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Crea</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active">Regala</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active">Personaliza</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-</head>
 
-<body>
-    <header>
-        <img src="./assets/Logos/logo en negro-01.png" alt="Logo de Ariadne" />
-        <nav>
-            <ul >
-                <li ><a href="#">Inicio</a></li>
-                <li ><a href="./sections/sobreariadne.html">Descubre</a></li>
-                <li ><a href="./sections/tutoriales.html">Crea</a></li>
-                <li ><a href="./sections/tienda.html">Regala</a></li>
-                <li ><a href="./sections/contacto-encargos.html">Personaliza</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <article>
-                <hn> 
-                    Ariadne <br />
-                    Crochet
-                </h1>
-                <h2 n>Creamos con Amor</h2>
-                <button n>
-                <a href="./sections/contacto-encargos.html"> <span> Crea con Ariadne </span></a>
-                </button>
-            </article> 
-            <div >
-                <img src="./css/bckgr-mariposa.png" alt="Imagen animada de Mariposa">
-            </div> 
-        </section> <!-- /HERO SECTION-->
-        <section>
-            <div>
-            <video src="./assets/placeholdervideo.mp4" type="video/mp4" width="550px" controls>Video introductorio de servicios
-                <code>No soporta video</code>
-            </video>
-            </div>
-            <div >
-                <h2 >Crochet Lovers</h2>
-                <p >
-                    Adriane es un emprendimiento que busca llevar el amor por el crochet
-                    a todakhjgdshgjg lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Nisi nemo unssssde blanditiis! Quos assumenda reprehenderit ut
-                    placeat, odio dignissimos. Quaerat voluptatum odio quibusdam nobis?
-                    Illum?
-                </p>
-            </div> <!-- /SECCIÓN INTRODUCTORIA VID + TXT-->
-        </section>
-    </main>
-    <section>
-        <div>
-            <img src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2>Recrea a tu ser amado</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
-                    quaerat aperiam fugit, omnis iure ipsa qui tempore in commodi? Blanditiis aspernatur ab cupiditate
-                    consequuntur!</p>
-        </div>
-        <div>
-            <img src="./assets/customers/lau-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2>Conviértete en la heroína de tus sueños</h2>
-            <p >Possimus rerum provident beatae corrupti adipisci culpa, repudiandae fuga illo. Dolore, modi? Vero at
-                    amet velit, veniam nobis hic, repellat accusantium suscipit odio debitis recusandae autem nam dolor quod
-                    incidunt.</p>
-        </div>
-        <div>
-            <img src="./assets/customers/manu-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2>Guarda un recuerdo hermoso</h2>
-            <p>Repellat architecto nesciunt ullam quia dolor id eum molestias, eos soluta corrupti! Nulla suscipit
-                    recusandae magni odio totam optio soluta deserunt vero porro, aut facere distinctio inventore tenetur
-                    architecto? Modi.</p>
-        </div>
-    </section> <!--/Valoraciones de clientes-->
-    <footer>
-        <div>
-            <img src="./assets/Logos/editable para sello ariadne crochet (1).png" alt="Logo de Ariadne" />
-            <ul>
-                <li><a href="https://www.instagram.com/ariadnecrochet/" target="_blank">instagram</a></li>
-                <li></li>
-            </ul>
-        </div>
-        <div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13318.01645865037!2d-70.6573578!3d-33.43617045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5bb5516f7e5%3A0x345d3c66bc685cbd!2sMall%20VIVO%20El%20Centro!5e0!3m2!1ses-419!2scl!4v1638116908324!5m2!1ses-419!2scl"
-                width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </footer>
-</body>
 
+    <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
+  </body>
 </html>
