--- a/index.html
+++ b/index.html
@@ -7,43 +7,62 @@
     <link rel="stylesheet" href="./css/styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
+
 
     <title>Ariadne Bootstrap</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="#">Ariadne Crochet</a>
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Descubre</a>
+              <a class="nav-link active" href="./sections/sobreariadne.html">Descubre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Crea</a>
+              <a class="nav-link active" href="./sections/tutoriales.html">Crea</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active">Regala</a>
+                <a class="nav-link active" href="./sections/tutoriales.html">Regala</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active">Personaliza</a>
+                <a class="nav-link active" href="./sections/tutoriales.html">Personaliza</a>
             </li>
           </ul>
         </div>
       </div>
-    </nav>
-
+    </header>
+    <main class="container-fluid">
+      <section class="row">
+        <div class="col-md-6">
+          <h1>Ariadne <br> Crochet</h1>
+          <h2>Crochet Lovers</h2>
+          <button class="btn"></button>
+        </div> 
+        <div data-aos="fade-left" class="col-md-6">
+          <img src="./assets/Logos/bckgr-mariposa.png" style="max-width:50%;" alt="Mariposa Animada">
+        </div>
+      </section>
+    </main>
+    
 
 
     <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
