--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav align-items-center">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Inicio</a>
             </li>
@@ -42,19 +42,116 @@
       </div>
     </header>
     <main class="container-fluid">
-      <section class="row">
-        <div class="col-md-6">
-          <h1>Ariadne <br> Crochet</h1>
-          <h2>Crochet Lovers</h2>
-          <button class="btn"></button>
+      <section class="row p-5 align-items-center hero">
+        <div data-aos="fade-right" class="col-md-9 col-lg-6 col-xs-8 p-4" >
+          <h1 class="main__h1">Ariadne <br> Crochet</h1>
+          <br>
+          <h2 class="main__h2">Crochet hecho por manos <br> que crean con amor</h2>
+          <br>
+          <button class="btn btn-outline-dark"> <a href="./sections/contacto-encargos.html">Crea con Ariadne</a></button>
         </div> 
-        <div data-aos="fade-left" class="col-md-6">
-          <img src="./assets/Logos/bckgr-mariposa.png" style="max-width:50%;" alt="Mariposa Animada">
+        <div data-aos="fade-left" class="col-md-3 col-lg-6 col-xs-4 p-4">
+          <img src="./assets/Logos/bckgr-mariposa.png" style="max-width:100%;" alt="Mariposa Animada">
+        </div>
+      </section>
+      <!-- FIN DEL HERO -->
+      <section class="container-fluid section__height p-5">
+        <div class="row">
+          <div class="col-sm-8 col-md-8 col-lg-6 align-self-center p-5">
+            <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video introductorio de servicios
+              <code>No soporta video</code>
+            </video>
+          </div>
+          <div class="col-sm-4 col-md-4 col-lg-6 p-5">
+            <h2 class="main__h22">Crochet Lovers</h2>
+            <br>
+            <p class="main__parragraph">
+                    Adriane es un emprendimiento que busca llevar el amor por el crochet
+                    a todakhjgdshgjg lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Nisi nemo unssssde blanditiis! Quos assumenda reprehenderit ut
+                    placeat, odio dignissimos. Quaerat voluptatum odio quibusdam nobis?
+                    Illum?
+            </p>
+          </div>
         </div>
       </section>
     </main>
+    <!-- FIN DEL MAIN -->
+    <section class="container-fluid p-1 justify-content-evenly">
+      <div class="row">
+        <div data-aos="fade-up" class="col-md-4 card textos">
+          <img class="img__clientes" src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
+          <h2 class="clientes__h2 main__h2--noitalic">Recrea a tu ser amado</h2>
+          <p class="client__parragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
+                  quaerat aperiam fugit, omnis iure ipsa qui tempore in commodi? Blanditiis aspernatur ab cupiditate
+                  consequuntur!</p>
+        </div>
+        <div data-aos="fade-up" class="col-md-4 card textos">
+          <img class="img__clientes" src="./assets/customers/lau-custom.png" alt="Imagen del producto comprado por el cliente">
+            <h2 class="clientes__h2 main__h2--noitalic">Conviértete en la heroína de tus sueños</h2>
+            <p class="client__parragraph">Possimus rerum provident beatae corrupti adipisci culpa, repudiandae fuga illo. Dolore, modi? Vero at
+                    amet velit, veniam nobis hic, repellat accusantium suscipit odio debitis recusandae autem nam dolor quod
+                    incidunt.</p>
+        </div>
+        <div data-aos="fade-up" class="col-md-4 card textos">
+          <img class="img__clientes" src="./assets/customers/manu-custom.png" alt="Imagen del producto comprado por el cliente">
+          <h2 class="clientes__h2 main__h2--noitalic">Guarda un recuerdo hermoso</h2>
+          <p class="client__parragraph">Repellat architecto nesciunt ullam quia dolor id eum molestias, eos soluta corrupti! Nulla suscipit
+                  recusandae magni odio totam optio soluta deserunt vero porro, aut facere distinctio inventore tenetur
+                  architecto? Modi.</p>
+        </div>
+      </div>
+    </section>
     
+<!-- 
+    <section class="container-fluid">
+      <div class="row p-5">
+        <div class="col-md-12 col-lg-12 align-self-center"></div>
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./assets/customers/divu-custom.png" class="d-block w-100 -100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Recrea a tu ser amado</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
+                    quaerat aperiam fugit.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/customers/lau-custom.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Conviértete en la heroína de tus sueños</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
+                    quaerat aperiam fugit.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./assets/customers/manu-custom.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
+                    quaerat aperiam fugit.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+      </div>
+    </section> -->
 
+    
 
     <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -65,4 +162,4 @@
       AOS.init();
     </script>
   </body>
-</html>
+</html> 
