--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
               <a class="nav-link active" href="./sections/tutoriales.html">Crea</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="./sections/tutoriales.html">Regala</a>
+                <a class="nav-link active" href="./sections/tienda.html">Regala</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="./sections/tutoriales.html">Personaliza</a>
+                <a class="nav-link active" href="./sections/contacto-encargos.html">Personaliza</a>
             </li>
           </ul>
         </div>
@@ -43,42 +43,43 @@
     </header>
     <main class="container-fluid">
       <section class="row p-5 align-items-center hero">
-        <div data-aos="fade-right" class="col-md-9 col-lg-6 col-xs-8 p-4" >
+        <div data-aos="fade-right" data-aos-duration="2000" class="col-md-9 col-lg-6 col-xs-8 p-4" >
           <h1 class="main__h1">Ariadne <br> Crochet</h1>
           <br>
           <h2 class="main__h2">Crochet hecho por manos <br> que crean con amor</h2>
           <br>
-          <button class="btn btn-outline-dark"> <a href="./sections/contacto-encargos.html">Crea con Ariadne</a></button>
+          <button class="btn btn-outline-dark text__deco"> <a href="./sections/contacto-encargos.html">Crea con Ariadne</a></button>
         </div> 
-        <div data-aos="fade-left" class="col-md-3 col-lg-6 col-xs-4 p-4">
+        <div data-aos="fade-left" data-aos-duration="2000" class="col-md-3 col-lg-6 col-xs-4 p-4">
           <img src="./assets/Logos/bckgr-mariposa.png" style="max-width:100%;" alt="Mariposa Animada">
         </div>
       </section>
       <!-- FIN DEL HERO -->
-      <section class="container-fluid section__height p-5">
-        <div class="row">
-          <div class="col-sm-8 col-md-8 col-lg-6 align-self-center p-5">
-            <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video introductorio de servicios
-              <code>No soporta video</code>
-            </video>
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-6 p-5">
-            <h2 class="main__h22">Crochet Lovers</h2>
-            <br>
-            <p class="main__parragraph">
-                    Adriane es un emprendimiento que busca llevar el amor por el crochet
-                    a todakhjgdshgjg lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Nisi nemo unssssde blanditiis! Quos assumenda reprehenderit ut
-                    placeat, odio dignissimos. Quaerat voluptatum odio quibusdam nobis?
-                    Illum?
-            </p>
-          </div>
-        </div>
-      </section>
     </main>
     <!-- FIN DEL MAIN -->
-    <section class="container-fluid p-1 justify-content-evenly">
+    <section class="container-fluid section__height d-flex flex-wrap p-5">
       <div class="row">
+        <div data-aos="fade-right" data-aos-duration="2000" class="col-sm-8 col-md-8 col-lg-6 align-self-center p-5">
+          <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video introductorio de servicios
+            <code>No soporta video</code>
+          </video>
+        </div>
+        <div data-aos="fade-left" data-aos-duration="2000" class="col-sm-4 col-md-4 col-lg-6 p-5">
+          <h2 class="main__h22">Crochet Lovers</h2>
+          <br>
+          <p class="main__parragraph">
+                  Adriane es un emprendimiento que busca llevar el amor por el crochet
+                  a todakhjgdshgjg lorem ipsum dolor sit amet consectetur adipisicing
+                  elit. Nisi nemo unssssde blanditiis! Quos assumenda reprehenderit ut
+                  placeat, odio dignissimos. Quaerat voluptatum odio quibusdam nobis?
+                  Illum?
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid p-1 d-flex justify-content-center">
+      <div class="row">
+        <h2  data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-5">Conoce lo que puedes crear</h2>
         <div data-aos="fade-up" class="col-md-4 card textos">
           <img class="img__clientes" src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
           <h2 class="clientes__h2 main__h2--noitalic">Recrea a tu ser amado</h2>
@@ -102,57 +103,21 @@
         </div>
       </div>
     </section>
-    
-<!-- 
-    <section class="container-fluid">
-      <div class="row p-5">
-        <div class="col-md-12 col-lg-12 align-self-center"></div>
-          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./assets/customers/divu-custom.png" class="d-block w-100 -100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Recrea a tu ser amado</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
-                    quaerat aperiam fugit.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/customers/lau-custom.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Conviértete en la heroína de tus sueños</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
-                    quaerat aperiam fugit.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/customers/manu-custom.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
-                    quaerat aperiam fugit.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-      </div>
-    </section> -->
-
-    
-
+    <footer class="container-fluid d-flex justify-content-around p-5">
+      <section class="row">
+        <div class="col-md-4">
+          <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
+          <br>
+          <a href="https://www.instagram.com/ariadnecrochet/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+          </svg> Instagram </a>
+        </div>
+        <div class="col-md-4"></div>
+        <div class="col-md-4 d-flex">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13318.01645865037!2d-70.6573578!3d-33.43617045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5bb5516f7e5%3A0x345d3c66bc685cbd!2sMall%20VIVO%20El%20Centro!5e0!3m2!1ses-419!2scl!4v1638116908324!5m2!1ses-419!2scl" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+      </section>
+    </footer>
     <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
