--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 
 
-    <title>Ariadne Bootstrap</title>
+    <title>Ariadne Crochet BS</title>
   </head>
   <body>
     <header class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -77,32 +77,34 @@
         </div>
       </div>
     </section>
+    <!-- CONOCIENDO MÁS -->
     <section class="container-fluid p-1 d-flex justify-content-center">
       <div class="row">
-        <h2  data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-5">Conoce lo que puedes crear</h2>
+        <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-5">Conoce lo que puedes crear</h2>
         <div data-aos="fade-up" class="col-md-4 card textos">
-          <img class="img__clientes" src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
-          <h2 class="clientes__h2 main__h2--noitalic">Recrea a tu ser amado</h2>
+          <img src="./assets/customers/divu-custom.png" alt="Imagen del producto comprado por el cliente">
+          <h2 class="clientes__h2">Recrea a tu ser amado</h2>
           <p class="client__parragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quo odio molestiae sunt numquam atque
                   quaerat aperiam fugit, omnis iure ipsa qui tempore in commodi? Blanditiis aspernatur ab cupiditate
                   consequuntur!</p>
         </div>
         <div data-aos="fade-up" class="col-md-4 card textos">
-          <img class="img__clientes" src="./assets/customers/lau-custom.png" alt="Imagen del producto comprado por el cliente">
-            <h2 class="clientes__h2 main__h2--noitalic">Conviértete en la heroína de tus sueños</h2>
+          <img src="./assets/customers/lau-custom.png" alt="Imagen del producto comprado por el cliente">
+            <h2 class="clientes__h2">Conviértete en la heroína de tus sueños</h2>
             <p class="client__parragraph">Possimus rerum provident beatae corrupti adipisci culpa, repudiandae fuga illo. Dolore, modi? Vero at
                     amet velit, veniam nobis hic, repellat accusantium suscipit odio debitis recusandae autem nam dolor quod
                     incidunt.</p>
         </div>
         <div data-aos="fade-up" class="col-md-4 card textos">
-          <img class="img__clientes" src="./assets/customers/manu-custom.png" alt="Imagen del producto comprado por el cliente">
-          <h2 class="clientes__h2 main__h2--noitalic">Guarda un recuerdo hermoso</h2>
+          <img src="./assets/customers/manu-custom.png" alt="Imagen del producto comprado por el cliente">
+          <h2 class="clientes__h2">Guarda un recuerdo hermoso</h2>
           <p class="client__parragraph">Repellat architecto nesciunt ullam quia dolor id eum molestias, eos soluta corrupti! Nulla suscipit
                   recusandae magni odio totam optio soluta deserunt vero porro, aut facere distinctio inventore tenetur
                   architecto? Modi.</p>
         </div>
       </div>
     </section>
+      <!-- FIN CONOCIENDO MÁS -->
     <footer class="container-fluid d-flex justify-content-around p-5">
       <section class="row">
         <div class="col-md-4">
@@ -122,9 +124,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
+
+    <!-- AOS SCRIPT -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
+    <!-- AOS SCRIPT -->
   </body>
 </html> 
