previo a merge con rama de sass

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Ariadne Crochet BS</title>
 </head>
 
-<body style="overflow-x: hidden;">
+<body style="overflow-x:hidden;">
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
@@ -87,22 +87,20 @@
   <!-- CONOCIENDO MÁS -->
   <section class="container-fluid p-1 d-flex">
     <div class="row d-flex justify-content-center">
-      <div>
-        <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-2">Conoce lo que puedes crear</h2>
-        <div data-aos="fade-up" class="col-md-3 card textos">
-          <img src="./assets/customers/divu-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
-          <h2 class="clientes__h2">Recrea a tu ser amado</h2>
-          <p class="client__parragraph">Con nuestros diseños personalizados, podemos recrear a esa persona especial, a esa
+      <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-2">Conoce lo que puedes crear</h2>
+      <div data-aos="fade-up" data-aos-duration="2000" class="col-md-4 card textos">
+        <img src="./assets/customers/divu-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
+        <h2 class="clientes__h2">Recrea a tu ser amado</h2>
+        <p class="client__parragraph">Con nuestros diseños personalizados, podemos recrear a esa persona especial, a esa
             mascota que tanto quieres y tener un recuerdo permanente de ellos.</p>
-        </div>
-      </div>
-      <div data-aos="fade-up" class="col-md-3 card textos align-self-center">
+     </div>
+      <div data-aos="fade-up" data-aos-duration="2000" class="col-md-4 card textos align-self-center">
         <img src="./assets/customers/lau-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
         <h2 class="clientes__h2">Conviértete en la heroína de tus sueños</h2>
         <p class="client__parragraph">Puedes llevar tu fantasía de ser la Sailor Scout que salvará a al mundo con un
           hermosos amigurumi diseñado a tu semajanza y conviértete en lo que desees.</p>
       </div>
-      <div data-aos="fade-up" class="col-md-3 card textos">
+      <div data-aos="fade-up" data-aos-duration="2000" class="col-md-4 card textos">
         <img src="./assets/customers/manu-custom.png" width="500px" alt="Imagen del producto comprado por el cliente">
         <h2 class="clientes__h2">Guarda un recuerdo hermoso</h2>
         <p class="client__parragraph">Creamos diseños personalizados para tener un regalo físico para cualquier ocasión
