nesting de estilos en sass con bem

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     </nav>
   </header>
   <main class="container-fluid">
-    <section class="row p-5 align-items-center hero">
+    <section class="row p-5 align-items-center main">
       <div data-aos="fade-right" data-aos-duration="2000" class="col-md-9 col-lg-6 col-xs-8 p-4">
         <h1 class="main__h1">Ariadne <br> Crochet</h1>
         <br>
         <h2 class="main__h2">Crochet hecho por manos <br> que crean con amor</h2>
         <br>
-        <button class="btn btn-outline-dark text__deco"> <a href="./sections/contacto-encargos.html">Crea con
+        <button class="btn btn-outline-dark main__deco"> <a href="./sections/contacto-encargos.html">Crea con
             Ariadne</a></button>
       </div>
       <div data-aos="fade-left" data-aos-duration="2000" class="col-md-3 col-lg-6 col-xs-4 p-4">
@@ -63,19 +63,19 @@
     <!-- FIN DEL HERO -->
   </main>
   <!-- FIN DEL MAIN -->
-  <section class="container-fluid section__height d-flex flex-wrap p-5">
+  <section class="container-fluid section d-flex flex-wrap p-5">
     <div class="row">
       <div class="d-flex">
         <div data-aos="fade-right" data-aos-duration="2000" class="col-md-6 p-5">
-          <video class="video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video
+          <video class="section__video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video
             introductorio de servicios
             <code>No soporta video</code>
           </video>
         </div>
         <div data-aos="fade-left" data-aos-duration="2000" class="col-md-6 p-5">
-          <h2 class="main__h22">Crochet Lovers</h2>
+          <h2 class="main__h2">Crochet Lovers</h2>
           <br>
-          <p class="main__parragraph">
+          <p class="section__p">
             Adriane es un emprendimiento que busca llevar el amor por el crochet desde la región del Bío Bío a todo el
             mundo. Amigurumis, patrones y video tutoriales para empezar a crear también ya que no solo puedes crear tus
             propios diseños con tus manos, sino que puedes contactarte con nosotros para que te ayudemos a llevar tus
@@ -88,7 +88,7 @@
   <!-- CONOCIENDO MÁS -->
   <section class="container-fluid p-1 d-flex">
     <div class="row d-flex justify-content-center">
-      <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-2">Conoce lo que puedes crear</h2>
+      <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 text-center p-2">Conoce lo que puedes crear</h2>
       
       <div class="d-flex text-justify justify-content-evenly p-5">
         <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 card textos">
