--- a/sections/contacto-encargos.html
+++ b/sections/contacto-encargos.html
@@ -41,7 +41,7 @@
     <div class="container-fluid">
       <div class="row">
         <div>
-          <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-5">Cuéntanos tu idea</h2>
+          <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 text-center p-5">Cuéntanos tu idea</h2>
         </div>
       </div>
     </div>
