--- a/sections/sobreariadne.html
+++ b/sections/sobreariadne.html
@@ -44,7 +44,7 @@
   <section class="container-flex p-5">
     <div class="row d-flex justify-content-between">
       <div>
-        <h2 data-aos="zoom-in" data-aos-duration="2000" class="main__h22 text-center p-5">Conoce a la creadora</h2>
+        <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 text-center p-5">Conoce a la creadora</h2>
         <div class="col-md-6">
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa exercitationem nihil explicabo dolorem ad
             nobis magni harum quas ea soluta saepe ducimus ipsam magnam rerum dolore, distinctio quo minus veniam!</p>
