--- a/sections/tienda.html
+++ b/sections/tienda.html
@@ -43,7 +43,7 @@
   </nav>
   <div class="container-flex p-5">
     <div class="row d-flex justify-content-around">
-      <div class="card col-md-3 p-3" style="width: 18rem;">
+      <div class="col-md-3 p-3" style="width: 18rem;">
         <img src="../assets/customers/divu-custom.png" class="card-img-top" alt="Producto 1">
         <div class="card-body">
           <h5 class="card-title">Divu</h5>
