--- a/sections/tutoriales.html
+++ b/sections/tutoriales.html
@@ -43,26 +43,27 @@
     </header>
     <section class="container-fluid p-4">
       <div class="row d-flex justify-content-evenly">
-        <div class="col-md-3 card textos">
+        <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 tutorial text-center p-5">Crea tus primeros Amigurumis</h2>
+        <div class="col-md-3 clientes__carta clientes__textos">
             <section class="main__section">
-                <video class="video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
+                <video class="section__video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
             </section>
-            <h3  class="tuto__h3">Materiales para empezar</h3>
-            <p class="tuto_parragraph">En el siguiente video, verás los materiales que debemos procurar para dar inicio en el mágico mundo del crochet.</p>
+            <h3  class="tutorial__h3">Materiales para empezar</h3>
+            <p class="tutorial_p">En el siguiente video, verás los materiales que debemos procurar para dar inicio en el mágico mundo del crochet.</p>
         </div>
-        <div class="col-md-3 card textos">
+        <div class="col-md-3 clientes__carta clientes__textos">
           <section class="main__section">
-            <video class="video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
+            <video class="section__video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
         </section>
-        <h3 class="tuto__h3">Arma tu primer diseño </h3>
-        <p class="tuto_parragraph">Acá conocerás los primeros pasos para iniciar con el mundo del tejido.</p>
+        <h3 class="tutorial__h3">Arma tu primer diseño </h3>
+        <p class="tutorial_p">Acá conocerás los primeros pasos para iniciar con el mundo del tejido.</p>
         </div>
-        <div class="col-md-3 card textos">
+        <div class="col-md-3 clientes__carta clientes__textos">
           <section class="main__section">
-            <video class="video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
+            <video class="section__video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px" controls></video>
         </section>
-        <h3 class="tuto__h3">Aprende patrones básicos </h3>
-        <p class="tuto_parragraph">Mirando este video, verás que  .</p>
+        <h3 class="tutorial__h3">Aprende patrones básicos </h3>
+        <p class="tutorial_p">Mirando este video, verás que  .</p>
         </div>
       </div>
     </section>
