--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
+  <meta name="description" content="Ariadne Crochet es un proyecto que busca incentivar el amor por el crochet ya sea ayudando a generar nuevos creadores de amigurumis, vendiendo diseños propios o realizando diseños personalizados según las necesidades de nuestros clientes.">
+  <meta name="keywords" content="HTML, Crochet, Amigurumis, Tutoriales, Venta, Creación">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -91,19 +93,19 @@
       <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 text-center p-2">Conoce lo que puedes crear</h2>
       
       <div class="d-flex text-justify justify-content-evenly p-5">
-        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 card textos">
+        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 clientes__carta clientes__textos">
           <img src="./assets/customers/divu-custom.png" width="100%" alt="Imagen del producto comprado por el cliente">
           <h2 class="clientes__h2 text-center">Recrea a tu ser amado</h2>
           <p class="client__parragraph text-justify">Con nuestros diseños personalizados, podemos recrear a esa persona especial, a esa
               mascota que tanto quieres y tener un recuerdo permanente de ellos.</p>
        </div>
-        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 card textos align-self-center">
+        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 clientes__carta clientes__textos">
           <img src="./assets/customers/lau-custom.png" width="100%" alt="Imagen del producto comprado por el cliente">
           <h2 class="clientes__h2 text-center">Conviértete en la heroína de tus sueños</h2>
           <p class="client__parragraph">Puedes llevar tu fantasía de ser la Sailor Scout que salvará a al mundo con un
             hermosos amigurumi diseñado a tu semajanza y conviértete en lo que desees.</p>
         </div>
-        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 card textos">
+        <div data-aos="fade-up" data-aos-duration="2000" class="col-md-3 clientes__carta clientes__textos">
           <img src="./assets/customers/manu-custom.png" width="100%" alt="Imagen del producto comprado por el cliente">
           <h2 class="clientes__h2 text-center">Guarda un recuerdo hermoso</h2>
           <p class="client__parragraph">Creamos diseños personalizados para tener un regalo físico para cualquier ocasión
@@ -131,6 +133,8 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13318.01645865037!2d-70.6573578!3d-33.43617045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c5bb5516f7e5%3A0x345d3c66bc685cbd!2sMall%20VIVO%20El%20Centro!5e0!3m2!1ses-419!2scl!4v1638116908324!5m2!1ses-419!2scl"
           width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
+      <div><p>Copyright (c) Div</p></div>
+      
     </section>
   </footer>
   <!-- BOOTSTRAP SCRIPTS - PENDIENTE -->
