--- a/sections/contacto-encargos.html
+++ b/sections/contacto-encargos.html
@@ -4,11 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/styles.css">
+    <meta name="description" content="Ariadne Crochet se encarga de crear Amigurumis personalizados presentando una referencia. Puede ser una persona, una figura de ficción. Lo que sea, lo creamos.">
+    <meta name="keywords" content="Crochet, Personalizados, Amigurumis, Idea, Venta, Contacta">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
-    <title>Ariadne Bootstrap</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <title>Ariadne Crochet | Realiza tu figura soñada con nostros </title>
   </head>
   <body style="overflow-x: hidden;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
