--- a/sections/sobreariadne.html
+++ b/sections/sobreariadne.html
@@ -5,11 +5,13 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Ariadne Crochet es el proyecto de pasión de su creadora Zura. Conoce más de cómo se lleva este proyecto.">
+  <meta name="keywords" content="Creadora, Pasión, Crochet, Amigurumis">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/main.css">
-  <title>Ariadne Bootstrap</title>
+  <title>Ariadne Crochet | Conoce a la creadora</title>
 </head>
 
 <body>
