--- a/sections/tienda.html
+++ b/sections/tienda.html
@@ -6,10 +6,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap CSS -->
+  <meta name="description" content="Ariadne Crochet se encarga de crear y vender amigurumis realizados en crochet completamente a mano"> 
+  <meta name="keywords" content="HTML, Crochet, Amigurumis, Venta, Personalizados">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/main.css">
-  <title>Ariadne Bootstrap</title>
+  <title>Ariadne Bootstrap - Compra con nosotros</title>
 </head>
 
 <body>
@@ -43,7 +45,7 @@
   </nav>
   <div class="container-flex p-5">
     <div class="row d-flex justify-content-around">
-      <div class="col-md-3 p-3" style="width: 18rem;">
+      <div class="card col-md-3 p-3" style="width: 18rem;">
         <img src="../assets/customers/divu-custom.png" class="card-img-top" alt="Producto 1">
         <div class="card-body">
           <h5 class="card-title">Divu</h5>
