--- a/sections/tutoriales.html
+++ b/sections/tutoriales.html
@@ -4,12 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ariadne Crochet cuenta con una sección para que personas sin experiencia aprendan desde cero cómo crear sus propios amigurumis en crochet.">
+    <meta name="keywords" content="HTML, Amigurumis, Crochet, Tutoriales,">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- MI CSS -->
     <link rel="stylesheet" href="../css/main.css">
 
-    <title>Ariadne Tutoriales BS</title>
+    <title>Ariadne Crochet | Aprende Creando</title>
   </head>
   <body>
     <header>
