--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!-- Mi CSS -->
   <link rel="stylesheet" href="./css/main.css">
-
-
-  <title>Ariadne Crochet BS</title>
+  <title>Ariadne Crochet | Inicio</title>
 </head>
 
 <body style="overflow-x:hidden;">
