Cambios de detalles finales

--- a/sections/contacto-encargos.html
+++ b/sections/contacto-encargos.html
@@ -68,10 +68,10 @@
 
           <div class="form-group mt-4">
               <label for="mensaje">Deje su comentario:</label>
-                      <textarea class= "form-control" name="controls" id="mensaje" cols="30" rows="10" placeholder="Deje su comentario"></textarea>
+              <textarea class= "form-control" name="controls" id="mensaje" cols="30" rows="10" placeholder="Deje su comentario" style="resize: none;"></textarea>
           </div>
     <br>
-  <button class="btn btn-outline-dark main__deco">Enviar</button>
+  <button class="btn btn-outline-dark main__deco my-5">Enviar</button>
   
   </form>
       
