--- a/sections/tienda.html
+++ b/sections/tienda.html
@@ -45,7 +45,7 @@
   </nav>
   <section class="container-flex p-5">
     <div class="row d-flex justify-content-around">
-      <div class="card col-md-3 p-3" style="width: 18rem;">
+      <div class="card col-md-3 my-2 p-3" style="width: 18rem;">
         <img src="../assets/customers/divu-custom.png" class="card-img-top" alt="Producto 1">
         <div class="card-body">
           <h5 class="card-title">Divu</h5>
@@ -54,7 +54,7 @@
           <a href="#" class="btn btn-outline-dark">$50.000</a>
         </div>
       </div>
-      <div class="card col-md-3 p-3" style="width: 18rem;">
+      <div class="card col-md-3 p-3 my-2" style="width: 18rem;">
         <img src="../assets/customers/manu-custom.png" class="card-img-top" alt="Producto 1">
         <div class="card-body">
           <h5 class="card-title">Manu</h5>
@@ -63,9 +63,9 @@
           <a href="#" class="btn btn-outline-dark">$50.000</a>
         </div>
     </div>
-    <div class="card col-md-3 p-3 bg__bg" style="width: 18rem;">
+    <div class="card col-md-3 p-3 my-2 bg__bg" style="width: 18rem;">
       <img src="../assets/customers/lau-custom.png" class="card-img-top" alt="Producto 1">
-      <div class="card-body">
+      <div class="card-body pb-4">
         <h5 class="card-title">Lau</h5>
         <p class="card-text">Este amigurumi está hecho de poliester, teijdo, pintado en ciertas partes y creado luego
           de 30 horas de trabajo.</p>
