--- a/sections/tutoriales.html
+++ b/sections/tutoriales.html
@@ -47,30 +47,30 @@
       <div class="row d-flex justify-content-evenly">
         <h2 data-aos="zoom-in" data-aos-duration="2000" class="section__h2 tutorial text-center p-5">Crea tus primeros
           Amigurumis</h2>
-        <div class="col-md-3 clientes__carta clientes__textos">
-          <section class="main__section">
+        <div class="col-md-3 p-2 m-4 clientes__carta clientes__textos">
+          <div class="main__section">
             <video class="tutorial__video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px"
               controls></video>
-          </section>
+          </div>
           <h3 class="tutorial__h3">Materiales para empezar</h3>
           <p class="tutorial_p">En el siguiente video, verás los materiales que debemos procurar para dar inicio en el
             mágico mundo del crochet.</p>
         </div>
-        <div class="col-md-3 clientes__carta clientes__textos">
-          <section class="main__section">
+        <div class="col-md-3 p-2 m-4 clientes__carta clientes__textos">
+          <div class="main__section">
             <video class="tutorial__video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px"
               controls></video>
-          </section>
-          <h3 class="tutorial__h3">Arma tu primer diseño </h3>
+          </div>
+          <h3 class="tutorial__h3 p-2">Arma tu primer diseño </h3>
           <p class="tutorial_p">Acá conocerás los primeros pasos para iniciar con el mundo del tejido.</p>
         </div>
-        <div class="col-md-3 clientes__carta clientes__textos">
-          <section class="main__section">
+        <div class="col-md-3 p-2 m-4 clientes__carta clientes__textos">
+          <div class="main__section">
             <video class="tutorial__video" src="../assets/placeholdervideo.mp4" type="video/mp4" width="500px"
               controls></video>
-          </section>
-          <h3 class="tutorial__h3">Aprende patrones básicos </h3>
-          <p class="tutorial_p">Mirando este video, verás que .</p>
+          </div>
+          <h3 class="tutorial__h3 p-2">Aprende patrones básicos </h3>
+          <p class="tutorial_p">Mirando este video, podrás ver técnicas más avanzados en la creación de tus diseños.</p>
         </div>
       </div>
     </section>
@@ -78,7 +78,7 @@
   <footer class="bg-dark container-fluid p-2">
     <div class="row d-flex p-3 flex-column align-items-center justify-content-center text-center">
       <div class=" rowcol-md-6 col-xs-6 justify-content-betweens align-items-center">
-        <img class="img-thumbnail img__box" src="./assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
+        <img class="img-thumbnail img__box" src="../assets/Logos/logo-pequenio.jpg" alt="Logo Ariadne">
   
         <a class="nav-link" style="color:white" href="https://www.instagram.com/ariadnecrochet/">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram"
