--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="row">
         <div data-aos="fade-right" data-aos-duration="2000" class="section__video col-md-6 p-5">
-          <video class="section__video" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video
+          <video class="section__video text-center" src="./assets/placeholdervideo.mp4" type="video/mp4" loop="loop" controls>Video
             introductorio de servicios
             <code>No soporta video</code>
           </video>
@@ -76,7 +76,7 @@
           <h2 class="main__h2">Crochet Lovers</h2>
           <br>
           <p class="section__p">
-            Adriane es un emprendimiennto que busca llevar la pasión de su creadora por el arte en crochet a creaciones de Amigurumis que
+            Adriane es un emprendimiento que busca llevar la pasión de su creadora por el arte en crochet a creaciones de Amigurumis que
             puedes crear cuando quieras mediante encargos personalizados o aprendiendo a crear desde cero con nuestros tutoriales. 
           </p>
         </div>
